@startuml
title Diagrama de clases — Vista general del dominio

hide empty methods
hide circle
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "Identidad y personal" {
  class User
  class Role
  class Employee
  class AttendanceRecord
}

package "Catálogo e inventario" {
  class Category
  class Unit
  class Product
  class ProductComposition
  class InventoryBalance
  class InventoryMovement
  class Production
  class ProductionConsumption
}

package "Operación y ventas" {
  class Order
  class OrderItem
  class KitchenCommand
  class KitchenCommandItem
  class Customer
  class Sale
  class SaleItem
}

package "Compras y abastecimiento" {
  class Supplier
  class Purchase
  class PurchaseItem
  class PurchaseReceipt
  class PurchaseReceiptLine
}

package "Caja, turnos y gastos" {
  class CashSession
  class Shift
  class ShiftAssignment
  class CashClosing
  class ExpenseCategory
  class Expense
}

User "0..1" -- "0..1" Employee
User "0..*" -- "0..*" Role
Employee "1" -- "0..*" AttendanceRecord

Category "1" -- "0..*" Product
Unit "1" -- "0..*" Product
Product "1" -- "0..*" ProductComposition : producto padre >
Product "1" -- "0..*" ProductComposition : componente >
Product "1" *-- "1" InventoryBalance
Product "1" -- "0..*" InventoryMovement
Product "1" -- "0..*" Production : producto producido >
Production "1" *-- "1..*" ProductionConsumption
Product "1" -- "0..*" ProductionConsumption : componente consumido >

Shift "1" -- "0..*" Order
Employee "0..1" -- "0..*" Order : mesero >
Order "1" *-- "1..*" OrderItem
Product "1" -- "0..*" OrderItem

Order "1" *-- "0..1" KitchenCommand
KitchenCommand "1" *-- "1..*" KitchenCommandItem
OrderItem "1" -- "0..1" KitchenCommandItem

Order "1" -- "0..1" Sale
Shift "1" -- "0..*" Sale
Customer "0..1" -- "0..*" Sale
Sale "1" *-- "1..*" SaleItem
Product "1" -- "0..*" SaleItem

Supplier "1" -- "0..*" Purchase
Purchase "1" *-- "1..*" PurchaseItem
Product "1" -- "0..*" PurchaseItem
Purchase "1" *-- "0..1" PurchaseReceipt
PurchaseReceipt "1" *-- "1..*" PurchaseReceiptLine
PurchaseItem "1" -- "0..1" PurchaseReceiptLine

CashSession "1" *-- "1..*" Shift
Shift "1" *-- "0..*" ShiftAssignment
Employee "1" -- "0..*" ShiftAssignment
CashSession "1" *-- "0..1" CashClosing

Shift "0..1" -- "0..*" Expense
ExpenseCategory "0..1" -- "0..*" Expense

note bottom
Vista general del dominio completo.
Sirve como mapa de alto nivel y debe complementarse con los diagramas
detallados por módulo para mantener legibilidad.
end note
@enduml
